--- a/public/assets/scss/component/_header.scss
+++ b/public/assets/scss/component/_header.scss
@@ -759,7 +759,7 @@
         right: 0px;
         top: 0px;
         width: 100%;
-        text-align: end;
+        text-align: flex-end;
         line-height: 44px;
         cursor: pointer;
         z-index: 5;
