--- a/public/assets/scss/component/_social-icon.scss
+++ b/public/assets/scss/component/_social-icon.scss
@@ -1,7 +1,7 @@
 .icon-topbar {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     height: 100%;
     & li {
         &:not(:first-child) {
