--- a/public/assets/scss/abstracts/_mixin.scss
+++ b/public/assets/scss/abstracts/_mixin.scss
@@ -108,8 +108,8 @@
 }
 @mixin flex-end {
     display      : flex;
-    align-items  : end;
-    justify-content: end;
+    align-items  : flex-end;
+    justify-content: flex-end;
 }
 @mixin space-between {
     display: flex;
