--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2127,11 +2127,10 @@ body.modal-open {
 
 /*------------ Button ---------------- */
 .btn-icon-list {
-  padding: 15px 25px;
+  padding: 10px 15px;
   border-radius: 9px;
   background-color: #0a1426;
   color: #ffffff;
-  display: inline-block;
   font-family: var(--font-main-family);
   font-size: 15px;
   font-weight: 500;
@@ -2141,6 +2140,8 @@ body.modal-open {
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 .btn-icon-list i {
   margin-left: 12px;
@@ -2149,6 +2150,9 @@ body.modal-open {
 .btn-icon-list:hover {
   color: #ffffff;
   background-color: #d01818;
+}
+.icon-add-button-1 {
+  font-size: 20px;
 }
 
 .btn-sell {
@@ -4569,7 +4573,7 @@ ul.social-icon li a i:hover {
 /*------------ Widget Tab service ---------------- */
 /*------------ Widget Car Service ---------------- */
 .hover-listing-image {
- height: 250px;
+  height: 250px;
   position: relative;
   z-index: 5;
 }
@@ -10634,7 +10638,7 @@ a.mapboxgl-ctrl-logo {
     top: -10px;
     left: 0px;
   }
-  .car-list-item{
+  .car-list-item {
     gap: 10px;
   }
   .box-icon-list {
@@ -10721,94 +10725,91 @@ a.mapboxgl-ctrl-logo {
 }
 
 @media only screen and (max-width: 500px) {
-  h6{
+  h6 {
     line-height: 24px;
   }
-  .tf-car-service .content .bottom-btn-wrap{
+  .tf-car-service .content .bottom-btn-wrap {
     font-size: 8px;
     margin-top: 0px;
   }
-  .tf-car-service .image{
+  .tf-car-service .image {
     height: 200px;
   }
 
-  .tf-car-service .image .listing-images{
+  .tf-car-service .image .listing-images {
     height: 200px;
   }
 
-  .hover-listing-image{
+  .hover-listing-image {
     height: 200px;
   }
-  .hover-listing-image .wrap-hover-listing{
+  .hover-listing-image .wrap-hover-listing {
     height: 200px;
   }
 
-  .tf-car-service .image .stm-badge-top .feature span{
+  .tf-car-service .image .stm-badge-top .feature span {
     font-size: 10px;
     padding: 5px 10px;
   }
 
-  .icon-service{
+  .icon-service {
     font-size: 15px;
   }
-  .tf-car-service .image .stm-badge-top{
+  .tf-car-service .image .stm-badge-top {
     top: 7px;
   }
-  .tf-car-service .content{
+  .tf-car-service .content {
     padding: 5px 10px;
   }
 
-  .tf-car-service .content .description ul{
+  .tf-car-service .content .description ul {
     font-size: 8px;
-
   }
   .tf-car-service
     .content
     .description
     ul
-    li.listing-information:not(:last-child){
-      margin-right: 5px;
-    }
+    li.listing-information:not(:last-child) {
+    margin-right: 5px;
+  }
 }
 @media only screen and (max-width: 400px) {
-  h6{
-    font-size: 14px;
-  }
-
+  h6,
   .tf-car-service .content .sub-title,
-  .tf-car-service .content .price{
-    font-size: 14px;
+  .tf-car-service .content .price {
+    font-size: 12px;
+    line-height: 15px;
   }
-  .tf-car-service .image{
+  .tf-car-service .image {
     height: 150px;
   }
-  .tf-car-service .content .description ul{
+  .tf-car-service .content .description ul {
     padding: 5px 0px;
   }
-  .tf-car-service .content .description ul li.listing-information .inner p{
+  .tf-car-service .content .description ul li.listing-information .inner p {
     font-size: 10px;
   }
 
-  .tf-car-service .image .listing-images{
+  .tf-car-service .image .listing-images {
     height: 150px;
   }
 
-  .hover-listing-image{
+  .hover-listing-image {
     height: 150px;
   }
-  .hover-listing-image .wrap-hover-listing{
+  .hover-listing-image .wrap-hover-listing {
     height: 150px;
   }
 
-  .tf-car-service .image .stm-badge-top .feature span{
+  .tf-car-service .image .stm-badge-top .feature span {
     font-size: 10px;
     padding: 5px 10px;
   }
 
-  .icon-service{
+  .icon-service {
     font-size: 10px;
   }
-  .tf-car-service .image .stm-badge-top{
+  .tf-car-service .image .stm-badge-top {
     top: 5px;
   }
 }
@@ -11167,7 +11168,7 @@ a.mapboxgl-ctrl-logo {
 }
 
 .upheader-item a svg {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 200;
 }
 
@@ -11326,6 +11327,118 @@ ul#navbar-mobile-bottom li {
   -webkit-tap-highlight-color: transparent;
 }
 
-.transmission{
+.transmission {
   padding-right: 5px;
+}
+
+.nav-wrapper {
+  text-align: center;
+}
+.sl-nav {
+  display: flex;
+  align-items: center;
+}
+.sl-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+  display: inline-block;
+}
+.sl-nav li {
+  cursor: pointer;
+}
+.sl-nav li ul {
+  display: none;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+}
+.sl-nav li ul li {
+  padding: 5px;
+}
+.sl-nav li:hover ul {
+  position: absolute;
+  top: 29px;
+  right: -15px;
+  display: block;
+  background: #fff;
+  width: 120px;
+  padding-top: 0px;
+  z-index: 1;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+.sl-nav li:hover .triangle {
+  position: absolute;
+  top: 15px;
+  right: -10px;
+  z-index: 10;
+  height: 14px;
+  overflow: hidden;
+  width: 30px;
+  background: transparent;
+}
+.sl-nav li:hover .triangle:after {
+  content: "";
+  display: block;
+  z-index: 20;
+  width: 15px;
+  transform: rotate(45deg) translateY(0px) translatex(10px);
+  height: 15px;
+  background: #fff;
+  border-radius: 2px 0px 0px 0px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.sl-nav li ul li:hover {
+  background-color: lightgray;
+}
+.sl-nav li ul li {
+  position: relative;
+  text-align: left;
+  background: transparent;
+  padding: 10px;
+  z-index: 2;
+  font-size: 15px;
+  color: #3c3c3c;
+}
+.sl-nav li ul li span {
+  padding-left: 5px;
+}
+.sl-nav li ul li span:hover,
+.sl-nav li ul li span.active {
+  color: #146c78;
+}
+.sl-flag {
+  display: inline-block;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
+  width: 15px;
+  height: 15px;
+  background: #aaa;
+  border-radius: 50%;
+  position: relative;
+  top: 2px;
+  overflow: hidden;
+}
+.upheader-item a {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+}
+.upheader-item a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  border-radius: 5px;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background: currentcolor;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.upheader-item a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
