--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10772,6 +10772,9 @@ a.mapboxgl-ctrl-logo {
     li.listing-information:not(:last-child) {
     margin-right: 5px;
   }
+  .image-icon{
+    font-size: 16px;
+  }
 }
 @media only screen and (max-width: 400px) {
   h6,
@@ -10811,6 +10814,9 @@ a.mapboxgl-ctrl-logo {
   }
   .tf-car-service .image .stm-badge-top {
     top: 5px;
+  }
+  .image-icon{
+    font-size: 12px;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -11182,12 +11188,12 @@ a.mapboxgl-ctrl-logo {
 
 .cat-container a {
   text-decoration: none;
-  width: 140px;
+  width: 300px;
 }
 
 .cat-container button {
   box-sizing: border-box;
-  width: 140px;
+  width: 100%;
   height: 75px;
   border-radius: 20px;
   background-color: #f5f5f5;
@@ -11196,6 +11202,7 @@ a.mapboxgl-ctrl-logo {
   justify-content: center;
   align-items: center;
   object-fit: cover;
+  padding: 0px 10px;
 }
 
 .cat-container button img {
@@ -11208,6 +11215,7 @@ a.mapboxgl-ctrl-logo {
   font-size: 12px;
   text-align: center;
   width: 100%;
+  color: black;
 }
 
 #header-mobile-bottom {
@@ -11421,7 +11429,8 @@ ul#navbar-mobile-bottom li {
   overflow: hidden;
 }
 .upheader-item a {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   position: relative;
   text-decoration: none;
 }
