--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11221,7 +11221,7 @@ a.mapboxgl-ctrl-logo {
 
 .cat-container label {
   text-wrap: wrap;
-  font-size: 12px;
+  font-size: 15px;
   text-align: center;
   width: 100%;
   color: black;
@@ -11501,4 +11501,19 @@ ul#navbar-mobile-bottom li {
 
 .swiper-slide{
   margin-right: 30px;
+}
+
+.description p{
+  font-size: 12px;
+}
+
+.divider-header{
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 30px 0px;
+}
+
+.tab-content .ad-banner{
+  margin-top: 30px;
 }
