--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6148,6 +6148,8 @@ ul.social-icon li a i:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
+  padding-bottom: 40px;
+  position: relative;
 }
 
 /*------------ Widget best-deals ---------------- */
@@ -11489,31 +11491,47 @@ ul#navbar-mobile-bottom li {
 }
 
 .tab-content-title,
-.tab-content-filter{
+.tab-content-filter {
   color: black;
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 30px;
 }
-.tab-content-filter{
+.tab-content-filter {
   margin-right: 5px;
 }
 
-.swiper-slide{
+.swiper-slide {
   margin-right: 30px;
 }
 
-.description p{
+.description p {
   font-size: 12px;
 }
 
-.divider-header{
+.divider-header {
   color: black;
   font-size: 20px;
   font-weight: 600;
   margin: 30px 0px;
 }
 
-.tab-content .ad-banner{
+.tab-content .ad-banner {
   margin-top: 30px;
 }
+
+.trailer-card {
+  border: 1px solid red;
+}
+
+.car-list-item button {
+  border-radius: 10px;
+  background-color: #00205c;
+  color: white;
+  padding: 5px 10px;
+  position: absolute;
+  right: 15px;
+  width: auto;
+  bottom: -10px;
+}
+
