--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4808,7 +4808,7 @@ ul.social-icon li a i:hover {
 
 .icon-service {
   background: #081e2a;
-  padding: 10px;
+  padding: 10px 11px;
   border-radius: 100%;
   font-size: 20px;
   color: white;
@@ -4816,6 +4816,35 @@ ul.social-icon li a i:hover {
 
 .icon-service:first-child {
   margin-right: 10px;
+}
+.icon-group .icon-service {
+  background: transparent;
+  color: #081e2a;
+  padding: 0px;
+}
+.icon-group .icon-service :first-child {
+  margin-right: 0px;
+}
+.icon-group .icon-service svg {
+  font-size: 20px;
+}
+.icon-group {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #efefef;
+  padding-bottom: 5px;
+}
+
+.rent-button {
+  padding: 9px 20px;
+  background-color: #00205c;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 15px;
+  color: #ffffff;
+  border-radius: 6px;
 }
 .tf-car-service .content .bottom-btn-wrap .btn-group .icon-service:hover {
   background-color: #d01818;
@@ -10764,6 +10793,11 @@ a.mapboxgl-ctrl-logo {
     padding: 5px 10px;
   }
 
+  .rent-button {
+    font-size: 10px;
+    padding: 5px 10px;
+  }
+
   .icon-service {
     font-size: 15px;
   }
@@ -11213,7 +11247,7 @@ a.mapboxgl-ctrl-logo {
   width: 100%;
   height: 75px;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: #eef2f6;
   padding: 0px;
   display: flex;
   justify-content: center;
@@ -11457,7 +11491,7 @@ ul#navbar-mobile-bottom li {
 .ad-price {
   position: absolute;
   bottom: 2px;
-  background-color: #000;
+  background-color: #081e2a;
   color: white;
   font-size: 16px;
   padding: 0px 10px;
@@ -11483,7 +11517,10 @@ ul#navbar-mobile-bottom li {
 .swiper-slide-box {
   width: 55% !important;
 }
-
+.swiper {
+  width: 100%;
+  height: auto;
+}
 .desktop-hider {
   display: none;
 }
@@ -11578,11 +11615,10 @@ ul#navbar-mobile-bottom li {
   border: 1px solid #f0e68c;
 }
 
-.information-icon{
+.information-icon {
   display: flex;
   justify-content: center;
 }
-.information-icon svg{
+.information-icon svg {
   font-size: 20px;
 }
-
