--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -634,7 +634,7 @@ input[type="checkbox"]:checked + label:after {
 .themesflat-container.w1260 {
   width: 1290px;
 }
-.widget-tf-slider .themesflat-container{
+.widget-tf-slider .themesflat-container {
   margin: 0px;
   padding: 0px;
   width: 100%;
@@ -2734,7 +2734,6 @@ ul.social-icon li a i:hover {
   top: 0;
   left: 0;
   object-fit: cover;
-  
 }
 .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image .overlay {
   top: 0;
@@ -5932,7 +5931,6 @@ ul.social-icon li a i:hover {
 .widget-car-service {
   margin-top: -85px;
   padding-bottom: 137px;
-  
 }
 .widget-car-service .header-section {
   display: flex;
@@ -7189,7 +7187,7 @@ a.mapboxgl-ctrl-logo {
 }
 
 .widget-car-listing-list {
-  padding: 120px 0px;
+  padding: 40px 0px;
 }
 
 .search-filter-listing-car {
@@ -10182,8 +10180,8 @@ a.mapboxgl-ctrl-logo {
   .car-list-item {
     grid-template-columns: 1fr 1fr;
   }
-  .widget-car-listing-list .car-list-item  {
-    grid-template-columns: 1fr 1fr!important;
+  .widget-car-listing-list .car-list-item {
+    grid-template-columns: 1fr 1fr !important;
   }
   .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-content {
     flex-wrap: wrap;
@@ -10812,7 +10810,7 @@ a.mapboxgl-ctrl-logo {
 }
 
 @media only screen and (max-width: 500px) {
-  .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image{
+  .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image {
     height: 400px;
   }
   h6 {
@@ -11668,8 +11666,8 @@ ul#navbar-mobile-bottom li {
 }
 
 .row .full-background {
-  padding-left: 0px!important;
-  padding-right: 0px!important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 .tf-car-service.premium {
@@ -11688,53 +11686,58 @@ ul#navbar-mobile-bottom li {
   display: flex;
   justify-content: center;
   align-items: center;
-	width: 100%;
+  width: 100%;
   height: 100vh;
   margin: 0;
 }
 
 .dark-mode-switcher svg {
-	scale: 1000%;
+  scale: 1000%;
 }
 
 .theme-toggle--toggled {
-	background: var(--color-back);
+  background: var(--color-back);
 }
 
-.input-title{
+.input-title {
   display: flex;
   align-items: center;
-  margin-bottom: 10px!important;
+  margin-bottom: 10px !important;
 }
 
-
-.input-title > div{
- margin-left: 10px;
+.input-title > div {
+  margin-left: 10px;
 }
 
-.input-title div{
-  color: #86898e; 
+.input-title div {
+  color: #86898e;
 }
 
-.mb-15{
-  margin-bottom: 15px!important;
+.mb-15 {
+  margin-bottom: 15px !important;
 }
 
-
-.input-title .css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input{
+.input-title .css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input {
   padding: 0px 0px 2px 5px;
 }
 
-
-input[type="number"]{
+input[type="number"] {
   padding: 15px 5px;
   border: 0px;
 }
 
-.row .divider-header{
+.row .divider-header {
   margin-top: 10px;
-} 
+}
 
-.widget-car-listing-list .car-list-item  {
+.widget-car-listing-list .car-list-item {
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.index-slider-items.active {
+  background-color: #00205c;
+}
+
+.index-slider-items.active label {
+  color: white !important;
 }
