--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9956,7 +9956,10 @@ a.mapboxgl-ctrl-logo {
     width: 100%!important;
     max-height: 100vh!important;
     border-radius: 0px!important;
-
+    padding-top: 70px!important;
+  }
+  .modal-close-btn{
+    top: 60px!important;
   }
   .search-filter-listing-car{
     flex-direction: column;
@@ -11805,6 +11808,9 @@ input[type="number"] {
   right: 15px;
   top: 10px;
 }
+.modal-close-btn svg{
+  font-size: 40px;
+}
 
 .modal-finish-btn{
   width: 100%;
@@ -11834,13 +11840,14 @@ input[type="number"] {
   border: 1px solid rgba(0, 0, 0, 0.23);
   border-radius: 4px;
 }
-
-.filter-button-select:hover{
-  background-color: red;
-  color: white;
-  border-color: transparent;
-  cursor: pointer;
-  box-shadow: 0px 0px 2px 0.5px red;
+@media only screen and (min-width: 991px) {
+  .filter-button-select:hover{
+    background-color: red;
+    color: white;
+    border-color: transparent;
+    cursor: pointer;
+    box-shadow: 0px 0px 2px 0.5px red;
+  }
 }
 
 .filter-button-select.selected{
