added padding bottom

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9957,6 +9957,7 @@ a.mapboxgl-ctrl-logo {
     max-height: 100vh!important;
     border-radius: 0px!important;
     padding-top: 70px!important;
+    padding-bottom: 70px!important;
   }
   .modal-close-btn{
     top: 60px!important;
